--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -20,9 +20,12 @@ on:
       - master
   schedule:
     - cron: 00 02 * * *
+  watch:
+    types: [started]
 jobs:
   run-it:
     runs-on: ubuntu-18.04
+    if: github.event.repository.owner.id == github.event.sender.id
     name: Run it on action
     steps:
       - name: Checkout master
@@ -53,3 +56,4 @@ jobs:
       - name: Run
         run: |
           php run
+          
